atualizando evento de aparecer opcoes de lingas

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,6 +99,10 @@ body {
     color: black;
 }
 
+.languages-options a {
+    transition: background-color 500ms, color 500ms;
+}
+
 .languages-options a:hover {
     background-color: #45567d;
     color: white;
